--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,6 +9,7 @@ $black: #1e1e1e;
 $violet: #8a2387;
 $red: #e94057;
 $orange: #f27121;
+$grad: linear-gradient(45deg, $violet, $red, $orange);
 
 //Font Sizes
 $h1: 64px;
