--- a/styles/loading.module.scss
+++ b/styles/loading.module.scss
@@ -2,13 +2,15 @@
 
 .container {
 	//Container Stuff
-	width: 100%;
-	height: 20px;
+	width: 300px;
+	height: 40px;
 	background-color: $white;
 }
 
 .loading {
 	//Loading Bar
+	margin-top: $p;
 	height: 100%;
 	background: $grad;
+	border-radius: $p/2;
 }
